<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_detail_mov"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/shape_detail"
    android:paddingTop="8dp"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <TextView
        android:id="@+id/rating_title"
        style="@style/TextContent.descGroupTitle"
        android:layout_width="wrap_content"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movie_rating"
        style="@style/TextContent.descGroupDetail"
        android:fontFamily="@font/msemibold"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/rating_title"
        tools:text="@string/movie_rating" />

    <TextView
        android:id="@+id/release_title"
        style="@style/TextContent.descGroupTitle"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_rating" />

    <TextView
        android:id="@+id/tv_movie_release"
        style="@style/TextContent.descGroupDetail"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/release_title"
        tools:text="@string/movie_release" />

    <TextView
        android:id="@+id/runtime_title"
        style="@style/TextContent.descGroupTitle"
        android:text="@string/runtime"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_release" />

    <TextView
        android:id="@+id/tv_movie_time"
        style="@style/TextContent.descGroupDetail"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/runtime_title"
        tools:text="@string/movie_time" />

    <TextView
        android:id="@+id/genre_title"
        style="@style/TextContent.descGroupTitle"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_time" />

    <TextView
        android:id="@+id/tv_movie_genre"
        style="@style/TextContent.descGroupDetail"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/genre_title"
        tools:text="@string/movie_genre" />

    <TextView
        android:id="@+id/directors_title"
        style="@style/TextContent.descGroupTitle"
        android:text="@string/directors"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_genre" />

    <TextView
        android:id="@+id/tv_movie_directors"
        style="@style/TextContent.descGroupDetail"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/directors_title"
        tools:text="@string/movie_directors" />

    <TextView
        android:id="@+id/writers_title"
        style="@style/TextContent.descGroupTitle"
        android:text="@string/writers"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_directors" />

    <TextView
        android:id="@+id/tv_movie_writers"
        style="@style/TextContent.descGroupDetail"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/writers_title"
        tools:text="@string/movie_writers" />

    <TextView
        android:id="@+id/studio_title"
        style="@style/TextContent.descGroupTitle"
        android:text="@string/studio"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_writers" />

    <TextView
        android:id="@+id/tv_movie_studio"
        style="@style/TextContent.descGroupDetail"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/studio_title"
        tools:text="@string/movie_studio" />

</androidx.constraintlayout.widget.ConstraintLayout>