<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/ic_movie"
        android:title="@string/tab_title_1" />

    <item
        android:id="@+id/nav_tvshow"
        android:icon="@drawable/ic_tv"
        android:title="@string/tab_title_2" />

    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_3" />

</menu>